examples/test/testpolicy18587.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18587
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key21: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value48
      podSelector:
        matchLabels:
          key5: value40
          key36: value12
          key16: value45
